<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="wallet">Wallet</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us your device specification and app log,
    all you have to do is click OK. This will help us prevent the error from occurring again</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="label_keys">Keys</string>
    <string name="label_properties">Properties</string>
    <string name="require_to_send_fund">Required to send funds</string>
    <string name="add_an_account">ADD AN ACCOUNT</string>
    <string name="available_balance">AVAILABLE BALANCE</string>
    <string name="send_dcr_info">Input or scan the destination wallet address and the amount in DCR to send funds.</string>
    <string name="max">SEND MAX</string>
    <string name="type">Type</string>
    <string name="loading">Loading</string>
    <string name="loading_ellipsis">Loading…</string>
    <string name="date">Date</string>
    <string name="dcr" translatable="false">DCR</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="debug">Debug</string>
    <string name="history">History</string>
    <string name="overview">Overview</string>
    <string name="permission">Permission</string>
    <string name="denied_permission">You denied the permission!!!</string>
    <string name="error_bundle_null">Error occurred, Bundle is null</string>
    <string name="receive">Receive</string>
    <string name="tickets">Tickets</string>
    <string name="amount_dcr">Amount</string>
    <string name="send">Send</string>
    <string name="sending">Sending</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="hash">Hash</string>
    <string name="connection">Connection</string>
    <string name="certificate">Certificate</string>
    <string name="confirmations">Confirmation</string>
    <string name="testnet">testnet</string>
    <string name="general">General</string>
    <string name="view_on_dcrdata">View on dcrdata</string>
    <string name="build_date">Build Date</string>
    <string name="build">build</string>
    <string name="copy_on_tap">(copy on tap)</string>
    <string name="for_more_information_please_visit">For more information please visit</string>
    <string name="https_docs_decred_org" translatable="false">https://docs.decred.org</string>
    <string name="exit_app_prompt_title">Exit wallet?</string>
    <string name="exit_app_prompt_message">Are you sure you want to exit?</string>
    <string name="delete_wallet_prompt_title">Delete Wallet?</string>
    <string name="delete_wallet_prompt_message">Are you sure you want to delete your wallet? Make sure you have your wallet seed saved or your coins moved before deleting. This will also clear all app settings to a default state.</string>
    <string name="details">Details</string>
    <string name="setting">Setting</string>
    <string name="hide_this_account">Hide This Account</string>
    <string name="account_balance_will_be_ignored">Account balance will be ignored.</string>
    <string name="default_account">Default Account</string>
    <string name="exit_cap">EXIT</string>
    <string name="hidden">hidden</string>
    <string name="delete">Delete</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="confirm">Confirm</string>
    <string name="usd" translatable="false">USD</string>
    <string name="hyphen" translatable="false">-</string>
    <string name="bittrex_unavailable">Bittrex rate unavailable (tap to retry)</string>
    <string name="coming_soon">Coming soon…</string>
    <string name="settings">Settings</string>
    <string name="more">More</string>
    <string name="changes_after_restart">Changes will take effect after app restarts</string>
    <string name="view_cap">VIEW</string>
    <string name="close_cap">CLOSE</string>
    <string name="exchange_rate_error">Exchange failed with error:</string>
    <string name="exchange_rate_unavailable"> rate unavailable (tap to retry)</string>
    <string name="ago">ago</string>
    <string name="now">now</string>
    <string name="you_received">You received</string>
    <string name="disconnected">Disconnected</string>
    <string name="syncing">Syncing</string>
    <string name="syncing_ellipsis">Syncing…</string>
    <string name="synced_with_one_peer">Synced with 1 peer</string>
    <string name="syncing_with_one_peer">Syncing with 1 peer</string>
    <string name="synced_with_multiple_peer">Synced with %1$d peers</string>
    <string name="syncing_with_multiple_peer">Syncing with %1$d peers</string>
    <string name="connected_to_a_peer">Connected to a peer</string>
    <string name="connected_to_n_peer">Connected to %1$d peer</string>
    <string name="ok">OK</string>
    <string name="user_agent">User Agent</string>
    <string name="user_agent_dialog_title">Set up user agent</string>
    <string name="peer_ip_dialog_title">Set up persistent peer</string>
    <string name="peer_ip_pref_hint">IP Address</string>
    <string name="log_file_not_found">Log file not found</string>
    <string name="wallet_log_copied">Wallet log copied successfully</string>
    <string name="dismiss">Dismiss</string>
    <string name="welcome_title">Welcome to Decred Wallet.</string>
    <string name="first_run_notice">Your 33 word seed is your wallet, keep it safe. Without it your funds cannot be recovered should your device be lost or destroyed.\n\nInitial wallet sync will take longer than usual. The wallet will connect to p2p nodes to download the blockchain headers, and will fetch only the blocks that you need while preserving your privacy.</string>
    <string name="less_than_one_day">&lt;1 day</string>
    <string name="less_than_one_day_ago">&lt;1 day ago</string>
    <string name="one_day">1 day</string>
    <string name="one_day_ago">1 day ago</string>
    <string name="multiple_days">%1$d days</string>
    <string name="multiple_days_ago">%1$d days ago</string>
    <string name="_copy">Copy</string>
    <string name="copied_successfully">Copied successfully.</string>
    <string name="all">All</string>
    <string name="re_establishing_connection">Re-establishing connection</string>
    <string name="address_not_found">Address not found.</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="clearAll">Clear All</string>
    <string name="share">Share</string>
    <string name="clear_fields">Clear fields</string>
    <string name="deleting_wallet">Deleting Wallet…</string>
    <string name="retry_caps">RETRY</string>
    <string name="share_address_via">Share the QR code image to</string>
    <string name="license">License</string>
    <string name="key_license" translatable="false">license</string>
    <string name="always">Always</string>
    <string name="not_synced">Not Synced</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="rename">Rename</string>
    <string name="create">Create</string>
    <string name="dcr_amount">%1$s DCR</string>
    <string name="rename_wallet">Rename Wallet</string>
    <string name="rename_wallet_sheet_title">Rename wallet</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="view_property">View property</string>
    <string name="remove">Remove</string>
    <string name="confirm_to_remove">Confirm to remove</string>
    <string name="remove_wallet">Remove wallet from device</string>
    <string name="remove_wallet_prompt">Remove wallet from device?</string>
    <string name="remove_wallet_message">Make sure to have the seed phrase backed up before removing the wallet.</string>
    <string-array name="nav_list_titles">
        <item>Overview</item>
        <item>History</item>
        <item>Send</item>
        <item>Receive</item>
        <item>Accounts</item>
        <item>Security</item>
        <item>Settings</item>
        <item>Help</item>
    </string-array>
    <string name="view_peers">View peers</string>
    <string name="id" translatable="false">Id</string>
    <string name="address_local" translatable="false">Address local</string>
    <string name="services">Services</string>
    <string name="relaytxes" translatable="false">Relaytxes</string>
    <string name="last_send">Last send</string>
    <string name="last_receive">Last receive</string>
    <string name="bytes_sent">Bytes sent</string>
    <string name="bytes_receive">Bytes receive</string>
    <string name="conntime" translatable="false">Conntime</string>
    <string name="time_offset">Time offset</string>
    <string name="pingtime" translatable="false">Pingtime</string>
    <string name="version">Version</string>
    <string name="sub_version">Sub version</string>
    <string name="inbound">Inbound</string>
    <string name="banscore" translatable="false">Banscore</string>
    <string name="syncode">Syncode</string>
    <string name="peer_details">Peer Details</string>
    <string name="peers">Peers</string>
    <string name="no_peer_found">No Peer Found</string>
    <string name="get_peer_info">Get Peers Info</string>
    <string name="summary_peers">View available peers and details</string>
    <string name="connecting_to_peers">Connecting to peers</string>
    <string name="invalid_peer_address">Peer address is invalid</string>
    <string name="subscribe_to_block_notification">Subscribe to block notification</string>
    <string name="discover_addresses">Discover addresses</string>
    <string name="connected_to_remote_node">Connected To Remote Node</string>
    <string name="connecting_to_rpc_server">Connecting to RPC Server</string>
    <string name="connecting_attempt">Connecting attempt</string>
    <string name="rpc_connection_failed">RPC Connection Failed:</string>
    <string name="account">Account</string>
    <string name="accounts">Accounts</string>
    <string name="account_number">Account Number</string>
    <string name="edit_account_name">Edit account name</string>
    <string name="input_your_new_account_name_and_enter_your_private_passphrase">Input your new account name and enter your private passphrase</string>
    <string name="account_name">Account Name</string>
    <string name="create_account">Create Account</string>
    <string name="private_passphrase">Private Passphrase</string>
    <string name="sending_decred">Sending Decred</string>
    <string name="from_colon">From:</string>
    <string name="destination_address">Destination Address</string>
    <string name="estimate_size">Estimate Size:</string>
    <string name="copy_raw_transaction">Copy raw transaction</string>
    <string name="tap_this_to_copy_raw_transaction_hex">Tap this to copy raw transaction hex</string>
    <string name="tap_this_to_copy_transaction_hash">Tap this to copy transaction hash</string>
    <string name="copy_hash">Copy hash</string>
    <string name="scan">Scan Address QR Code</string>
    <string name="qr_code_help_text">Input or scan the destination wallet address\nand the amount in DCR to send funds.</string>
    <string name="send_in_dcr">Send in DCR:</string>
    <string name="send_in_usd">Send in USD:</string>
    <string name="_0_00_dcr">0.00 DCR</string>
    <string name="_0_00_">0.00 </string>
    <string name="_0_bytes">0 bytes</string>
    <string name="balance_after">Balance After:</string>
    <string name="exchange_rate">Exchange Rate:</string>
    <string name="bittrex_rate_unavailable_tap_to_retry">Bittrex rate unavailable (tap to retry)</string>
    <string name="fee_colon">Fee:</string>
    <string name="wifi_sync_notice">Would you like to sync anyways?</string>
    <string name="not_connected_to_wifi">Not connected to WiFi.</string>
</resources>