<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/tx_details_tx_hash"
        android:title="@string/copy_hash"
        android:contentDescription="@string/tap_this_to_copy_transaction_hash"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/tx_details_raw_tx"
        android:title="@string/copy_raw_transaction"
        android:contentDescription="@string/tap_this_to_copy_raw_transaction_hex"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/tx_viewOnDcrData"
        android:title="View On Dcrdata"
        android:contentDescription="link to DCR data"
        app:showAsAction="never"
        />
</menu>