<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018-2019 The Decred developers
  ~ Use of this source code is governed by an ISC
  ~ license that can be found in the LICENSE file.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/not_connected_to_wifi"
            android:textColor="@color/turquoise"
            android:textSize="20sp"
            app:fontFamily="@font/source_sans_pro_regular_family" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/wifi_sync_notice"
            android:textColor="@color/blueGrayFirstTextColor"
            android:textSize="16sp"
            app:fontFamily="@font/source_sans_pro_regular_family" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/colorPrimary"
        android:weightSum="3">

        <TextView
            android:id="@+id/btn_negative"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/darkBlueTextColor"
            android:textSize="14sp"
            app:fontFamily="@font/source_sans_pro_semibold_family" />

        <TextView
            android:id="@+id/btn_positive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/blue"
            android:textSize="14sp"
            app:fontFamily="@font/source_sans_pro_semibold_family" />

        <TextView
            android:id="@+id/btn_always"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/always"
            android:textColor="@color/blue"
            android:textSize="14sp"
            app:fontFamily="@font/source_sans_pro_semibold_family" />
    </LinearLayout>

</LinearLayout>