<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="10dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fontFamily="@font/source_sans_pro_regular"
            android:text="@string/sending_decred"
            android:textColor="@color/darkBlueTextColor"
            android:textSize="23sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blueGrayFirstTextColor"
            app:fontFamily="@font/source_sans_pro_regular"
            android:text="@string/qr_code_help_text"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fontFamily="@font/source_sans_pro_regular"
                android:gravity="end"
                android:text="@string/from_colon"
                android:textColor="@color/blueGrayFirstTextColor87pc"
                android:textSize="20sp"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="1dp"
                >
                <Spinner
                    android:id="@+id/send_account_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top">
                </Spinner>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGreyBackgroundColor" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/send_dcr_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:hint="@string/destination_address"
                android:inputType="text"
                android:maxLines="1"
                android:paddingTop="8dp"
                android:paddingBottom="3dp"
                android:textColor="@color/blueLinkTextColor"
                android:textColorHint="@color/blueGrayFirstTextColor38pc"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/send_dcr_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:padding="4dp"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/scan"
                android:src="@mipmap/icons8_qr_code" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGreyBackgroundColor" />

        <TextView
            android:id="@+id/tvDestinationError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:layout_gravity="end"
            app:fontFamily="@font/source_sans_pro_regular"
            android:textColor="@color/orangeTextColor"
            android:visibility="visible"
            tools:text="test text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_in_dcr"
                        android:textColor="@color/blueGrayFirstTextColor38pc"
                        android:textSize="16sp" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:digits="0123456789."
                        android:hint="@string/_0_00_"
                        android:inputType="numberDecimal"
                        android:lines="1"
                        android:textColor="@color/darkBlueTextColor"
                        android:id="@+id/amount_dcr"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        app:fontFamily="@font/source_sans_pro_regular"
                        android:text="@string/dcr"
                        android:textColor="@color/darkBlueTextColor"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:id="@+id/exchange_layout"
                    android:visibility="gone"
                    tools:visibility="visible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_in_usd"
                        android:textColor="@color/blueGrayFirstTextColor38pc"
                        android:textSize="16sp"
                        />

                    <EditText
                        android:id="@+id/amount_usd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:digits="0123456789."
                        android:hint="@string/_0_00_"
                        android:inputType="numberDecimal"
                        android:lines="1"
                        android:textColor="@color/darkBlueTextColor" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        app:fontFamily="@font/source_sans_pro_regular"
                        android:text="@string/usd"
                        android:textColor="@color/darkBlueTextColor"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/send_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/max"
                android:textColor="@color/blueGrayFirstTextColor"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGreyBackgroundColor"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/send_error_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/orangeTextColor"
            tools:text="test text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    app:fontFamily="@font/source_sans_pro_regular"
                    android:gravity="start"
                    android:text="@string/fee_colon"
                    android:textColor="@color/blueGrayFirstTextColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/send_dcr_estimate_fee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fontFamily="@font/inconsolata_regular"
                    android:text="@string/_0_00_dcr"
                    android:textColor="@color/blueGrayFirstTextColor"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    app:fontFamily="@font/source_sans_pro_regular"
                    android:gravity="start"
                    android:text="@string/estimate_size"
                    android:textColor="@color/blueGrayFirstTextColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/send_dcr_estimate_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fontFamily="@font/inconsolata_regular"
                    android:text="@string/_0_bytes"
                    android:textColor="@color/blueGrayFirstTextColor"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    app:fontFamily="@font/source_sans_pro_regular"
                    android:gravity="start"
                    android:text="@string/balance_after"
                    android:textColor="@color/blueGrayFirstTextColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/send_dcr_balance_after"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fontFamily="@font/inconsolata_regular"
                    android:text="@string/_0_00_dcr"
                    android:textColor="@color/blueGrayFirstTextColor"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/exchange_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    app:fontFamily="@font/source_sans_pro_regular"
                    android:gravity="start"
                    android:text="@string/exchange_rate"
                    android:textColor="@color/blueGrayFirstTextColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/send_dcr_exchange_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blueGrayFirstTextColor"
                    app:fontFamily="@font/source_sans_pro_regular"
                    android:textSize="20sp"
                    tools:text="test text" />
            </LinearLayout>

            <TextView
                android:id="@+id/rate_unavailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/orangeTextColor"
                android:text="@string/bittrex_rate_unavailable_tap_to_retry"
                android:visibility="invisible"
                tools:visibility="visible"
                />
        </LinearLayout>

        <Button
            android:id="@+id/send_btn"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_blue"
            android:enabled="false"
            android:text="@string/send"
            android:textColor="@color/blackTextColor38pc"
            android:textSize="14sp" />

    </LinearLayout>

</ScrollView>